--- a/index.html
+++ b/index.html
@@ -53,7 +53,31 @@
       </div>
     </div>
     <div class="header">
-      <p class="hi">Hi there,</p>
+      <div class="top">
+        <div class="search">
+  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
+          <input type="text">
+        </div>
+        <div class="profile">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg>
+          <img class="avatar" src="images/avatar-1.png" alt="Profile pic">
+          <h3 class="profile-name">Morgan Oakley</h3>
+        </div>
+      </div>
+      <div class="bottom">
+        <div class="hello">
+          <img class="avatar" src="images/avatar-1.png" alt="Profile pic">
+          <div>
+            <p class="hi">Hi there,</p>
+            <h2 class="username">Morgan Oakley (@morgan)</h2>
+          </div>
+        </div>
+        <ul class="buttons">
+          <li><button>New</button></li>
+          <li><button>Upload</button></li>
+          <li><button>Share</button></li>
+        </ul>
+      </div>
     </div>
     <div class="main">
       <div class="info-section projects">
@@ -66,6 +90,5 @@
         <h2>Trending</h2>
       </div>
     </div>
-
   </body>
 </html>
