--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
   </head>
   <body>
     <div class="sidebar">
@@ -54,41 +55,49 @@
     </div>
     <div class="header">
       <div class="top">
-        <div class="search">
+        <!-- <div class="search"> -->
   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
           <input type="text">
-        </div>
-        <div class="profile">
+        <!-- </div> -->
+        <!-- <div class="profile"> -->
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg>
           <img class="avatar" src="images/avatar-1.png" alt="Profile pic">
-          <h3 class="profile-name">Morgan Oakley</h3>
-        </div>
+          <h3 class="profile-name">Trueman Phamdo</h3>
+        <!-- </div> -->
       </div>
       <div class="bottom">
         <div class="hello">
           <img class="avatar" src="images/avatar-1.png" alt="Profile pic">
           <div>
             <p class="hi">Hi there,</p>
-            <h2 class="username">Morgan Oakley (@morgan)</h2>
+            <h2 class="username">Trueman Phamdo (@tphamdo)</h2>
           </div>
         </div>
         <ul class="buttons">
-          <li><button>New</button></li>
-          <li><button>Upload</button></li>
-          <li><button>Share</button></li>
+          <li><button onclick="alert('this button does not work yet :)');">New</button></li>
+          <li><button onclick="alert('this button does not work yet :)');">Upload</button></li>
+          <li><button onclick="alert('this button does not work yet :)');">Share</button></li>
         </ul>
       </div>
     </div>
     <div class="main">
-      <div class="info-section projects">
-        <h2>Your projects</h2>
+      <div class="projects-section info-section">
+        <h2 class="section-name">Your projects</h2>
+        <div class="projects">
+        </div>
       </div>
-      <div class="info-section announcements">
-        <h2>Announcements</h2>
+      <div class="announcements-section info-section">
+        <h2 class="section-name">Announcements</h2>
+        <div class="announcements">
+        </div>
       </div>
-      <div class="info-section trending">
-        <h2>Trending</h2>
+      <div class="trending-section info-section">
+        <h2 class="section-name">Trending</h2>
+        <div class="trending-users">
+        </div>
       </div>
     </div>
   </body>
 </html>
+
+
